--- a/application/admin/view/food/picEdit.html
+++ b/application/admin/view/food/picEdit.html
@@ -39,7 +39,7 @@
                     </div>
                     <div class="space15"></div>
 
-                    <form action="{:url('admin/hotelpic/update',['id'=>$pic.id])}" method="post" enctype="multipart/form-data">
+                    <form action="{:url('admin/foodpic/update',['id'=>$pic.id])}" method="post" enctype="multipart/form-data">
                         <input type="hidden" name="_method" value="PUT">
                         <input type="hidden" name="id" value="{$pic.id}">
 
