--- a/application/index/view/index/list.html
+++ b/application/index/view/index/list.html
@@ -69,15 +69,15 @@
                 {/volist}
                 <!--Product List Style 2 Wrap End-->
 
-                <div class="gt_pagination_outer_wrap">
-                    <ul>
-                        <li><a href="#"><i class="fa fa-angle-double-left"></i></a></li>
-                        <li class="active"><a href="#">1</a></li>
-                        <li><a href="#">2</a></li>
-                        <li><a href="#">3</a></li>
-                        <li><a href="#"><i class="fa fa-angle-double-right"></i></a></li>
-                    </ul>
-                </div>
+                <!--<div class="gt_pagination_outer_wrap">-->
+                    <!--<ul>-->
+                        <!--<li><a href="#"><i class="fa fa-angle-double-left"></i></a></li>-->
+                        <!--<li class="active"><a href="#">1</a></li>-->
+                        <!--<li><a href="#">2</a></li>-->
+                        <!--<li><a href="#">3</a></li>-->
+                        <!--<li><a href="#"><i class="fa fa-angle-double-right"></i></a></li>-->
+                    <!--</ul>-->
+                <!--</div>-->
                 <!--Product List Wrap End-->
 
             </div>
@@ -96,7 +96,7 @@
 <!--gt Wrapper End-->
 
 
-
+{block name="myjs"}
 <!--Jquery Library-->
 <script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
 <!--Bootstrap core JavaScript-->
@@ -107,5 +107,5 @@
 
 <!--Custom JavaScript-->
 <script src="/static/app/index/js/custom.js"></script>
-
+{/block}
 
