--- a/mobile/index/view/index/index.html
+++ b/mobile/index/view/index/index.html
@@ -20,26 +20,26 @@
     <div data-am-widget="slider" class="am-slider am-slider-a1" data-am-slider='{"directionNav":false}' >
         <ul class="am-slides">
             <li>
-                <img src="/static/mobile/img/fl01.png">
+                <img src="/static/mobile/img/cun1.jpg" height="400">
                 <div class="pet_slider_font">
                     <span class="pet_slider_emoji"> (╭￣3￣)╭♡   </span>
-                    <span>“大白”有望成为现实：充气机器人研究取得进展</span>
+                    <span>越中古胜地，活力新富盛。</span>
                 </div>
                 <div class="pet_slider_shadow"></div>
             </li>
             <li>
-                <img src="/static/mobile/img/fl02.png">
+                <img src="/static/mobile/img/cun2.jpg">
                 <div class="pet_slider_font">
                     <span class="pet_slider_emoji"> []~(￣▽￣)~*　</span>
-                    <span>已然魔性的雪橇犬哈士奇 —《雪地狂奔》</span>
+                    <span>相约最美乡村，品味桃花春色</span>
                 </div>
                 <div class="pet_slider_shadow"></div>
             </li>
             <li>
-                <img src="/static/mobile/img/fl03.png">
+                <img src="/static/mobile/img/cun3.jpg">
                 <div class="pet_slider_font">
                     <span class="pet_slider_emoji"> (｡・`ω´･)　</span>
-                    <span>《星际争霸2:虚空之遗》国服过审!</span>
+                    <span>乡村的精彩，花园的风采。</span>
                 </div>
                 <div class="pet_slider_shadow"></div>
             </li>
@@ -49,14 +49,14 @@
 
     <div class="pet_circle_nav">
         <ul class="pet_circle_nav_list">
-            <li><a href="" class="iconfont pet_nav_xinxianshi ">&#xe61e;</a><span>新鲜事</span></li>
-            <li><a href="" class="iconfont pet_nav_zhangzhishi ">&#xe607;</a><span>趣闻</span></li>
-            <li><a href="" class="iconfont pet_nav_kantuya ">&#xe62c;</a><span>阅读</span></li>
-            <li><a href="" class="iconfont pet_nav_mengzhuanti ">&#xe622;</a><span>专题</span></li>
-            <li><a href="" class="iconfont pet_nav_meirong ">&#xe629;</a><span>订阅</span></li>
-            <li><a href="" class="iconfont pet_nav_yiyuan ">&#xe602;</a><span>专栏</span></li>
-            <li><a href="" class="iconfont pet_nav_dianpu ">&#xe604;</a><span>讨论</span></li>
-            <li><a href="javascript:;" class="iconfont pet_nav_gengduo ">&#xe600;</a><span>更多</span></li>
+            <li><a href="" class="iconfont pet_nav_xinxianshi ">&#xe61e;</a><span>风景</span></li>
+            <li><a href="" class="iconfont pet_nav_zhangzhishi ">&#xe607;</a><span>旅游路线</span></li>
+            <li><a href="" class="iconfont pet_nav_kantuya ">&#xe62c;</a><span>美食</span></li>
+            <li><a href="" class="iconfont pet_nav_mengzhuanti ">&#xe622;</a><span>住宿</span></li>
+            <li><a href="" class="iconfont pet_nav_meirong ">&#xe629;</a><span>活动</span></li>
+            <li><a href="" class="iconfont pet_nav_yiyuan ">&#xe602;</a><span>天气</span></li>
+            <li><a href="" class="iconfont pet_nav_dianpu ">&#xe604;</a><span>新闻</span></li>
+            <li><a href="javascript:;" class="iconfont pet_nav_gengduo ">&#xe600;</a><span>个人中心</span></li>
         </ul>
         <div class="pet_more_list"><div class="pet_more_list_block">
             <div class="iconfont pet_more_close">×</div>
@@ -65,11 +65,11 @@
                     <div class="pet_more_list_block_name_title">阅读 Read</div>
                     <a class="pet_more_list_block_line">
                         <i class="iconfont pet_nav_xinxianshi pet_more_list_block_line_ico">&#xe61e;</i>
-                        <div class="pet_more_list_block_line_font">新鲜事</div>
+                        <div class="pet_more_list_block_line_font">风景</div>
                     </a>
                     <a class="pet_more_list_block_line">
                         <i class="iconfont pet_nav_zhangzhishi pet_more_list_block_line_ico">&#xe607;</i>
-                        <div class="pet_more_list_block_line_font">趣闻</div>
+                        <div class="pet_more_list_block_line_font">风景</div>
                     </a>
                     <a class="pet_more_list_block_line">
                         <i class="iconfont pet_nav_kantuya pet_more_list_block_line_ico">&#xe62c;</i>
