--- a/application/admin/view/hotel/hotelEdit.html
+++ b/application/admin/view/hotel/hotelEdit.html
@@ -24,7 +24,7 @@
         <div class="col-sm-12">
             <section class="panel">
                 <header class="panel-heading">
-                    修改商品信息
+                    修改住宿信息
                     <span class="tools pull-right">
                         <a href="javascript:;" class="fa fa-chevron-down"></a>
                         <a href="javascript:;" class="fa fa-times"></a>
@@ -65,6 +65,14 @@
                         <div class="form-group">
                             <label for="exampleInputPassword1">折扣价</label>
                             <input type="text" name="gd_discount" class="form-control" id="exampleInputPassword1" value="{$data.gd_discount}">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">联系方式</label>
+                            <input type="text" name="gd_phone" class="form-control" id="exampleInputPassword1" value="{$data.gd_phone}">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">地址</label>
+                            <input type="text" name="gd_address" class="form-control" id="exampleInputPassword1" value="{$data.gd_address}">
                         </div>
 
 
