--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -75,7 +75,7 @@
 
         <!--logo and iconic logo start-->
         <div class="logo">
-            <a href="index.html"><img src="/static/app/admin/images/logo.png" alt=""></a>
+            <a href="index.html"><img src="/static/app/admin/images/1111.png" alt=""></a>
         </div>
 
         <div class="logo-icon text-center">
@@ -245,12 +245,13 @@
             <a class="toggle-btn"><i class="fa fa-bars"></i></a>
             <!--toggle button end-->
 
-            <!--search start-->
-            <form class="searchform" action="index.html" method="post">
-                <input type="text" class="form-control" name="keyword" placeholder="Search here..." />
-            </form>
-            <!--search end-->
-
+            <!--&lt;!&ndash;search start&ndash;&gt;-->
+            <!--<form class="searchform" action="index.html" method="post">-->
+                <!--<input type="text" class="form-control" name="keyword" placeholder="Search here..." />-->
+            <!--</form>-->
+            <!--&lt;!&ndash;search end&ndash;&gt;-->
+            <br>
+            　　<a href="javascript:history.go(-1)" class=" btn-info btn-lg">返回上一页</a>
             <!--notification menu start -->
             <div class="menu-right">
                 <ul class="notification-menu">
