--- a/application/admin/view/scenery/adminlistDetail.html
+++ b/application/admin/view/scenery/adminlistDetail.html
@@ -48,6 +48,7 @@
                             <th align="center" valign="middle">折扣价</th>
                             <th align="center" valign="middle">历史销量</th>
                             <th align="center" valign="middle">浏览量</th>
+                            <th align="center" valign="middle">联系方式</th>
                             <th align="center" valign="middle">是否热销</th>
                             <th align="center" valign="middle">是否上架</th>
 
@@ -65,6 +66,7 @@
                             <td align="center" >{$data2.gd_discount}</td>
                             <td align="center" >{$data2.gd_num}</td>
                             <td align="center" >{$data2.gd_view}</td>
+                            <td align="center" >{$data2.gd_phone}</td>
 
                             <td align="center" >
                                 {if condition="$data1.gd_hot eq '1'" }是
