--- a/application/admin/view/scenery/list.html
+++ b/application/admin/view/scenery/list.html
@@ -137,6 +137,10 @@
                             <label for="exampleInputPassword1">折扣价</label>
                             <input type="text" name="gd_discount" class="form-control" id="exampleInputPassword1" placeholder="请输入折扣价">
                         </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">联系方式</label>
+                            <input type="text" name="gd_phone" class="form-control" id="exampleInputPassword1" placeholder="请输入联系方式">
+                        </div>
 
 
                         <div class="form-group">
