--- a/application/admin/view/scenery/listDetail.html
+++ b/application/admin/view/scenery/listDetail.html
@@ -48,6 +48,7 @@
                             <th align="center" valign="middle">折扣价</th>
                             <th align="center" valign="middle">历史销量</th>
                             <th align="center" valign="middle">浏览量</th>
+                            <th align="center" valign="middle">联系方式</th>
                             <th align="center" valign="middle">是否热销</th>
                             <th align="center" valign="middle">是否上架</th>
                             <th align="center" valign="middle">操作</th>
@@ -65,6 +66,7 @@
                             <td align="center" >{$data2.gd_discount}</td>
                             <td align="center" >{$data2.gd_num}</td>
                             <td align="center" >{$data2.gd_view}</td>
+                            <td align="center" >{$data2.gd_phone}</td>
 
                             <td align="center" >
                                 {if condition="$data1.gd_hot eq '1'" }是
@@ -125,6 +127,10 @@
                         <div class="form-group">
                             <label for="exampleInputPassword1">折扣价</label>
                             <input type="text" name="gd_discount" class="form-control" id="exampleInputPassword1" value="{$data2.gd_discount}">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">联系方式</label>
+                            <input type="text" name="gd_phone" class="form-control" id="exampleInputPassword1" value="{$data2.gd_phone}">
                         </div>
 
 
