完善购物流程

--- a/application/index/view/index/foodDetail.html
+++ b/application/index/view/index/foodDetail.html
@@ -60,9 +60,15 @@
                   </div>
                     <form action="{:url('index/cart/index')}" method="post">
                         <input type="hidden" name="id" value="{$foods['id']}">
-                        <input type="hidden" name="type" value="food">
+                        <input type="hidden" name="type" value="特产美食">
                         <input type="hidden" name="point" value="{:round($detail['gd_price']/20)}">
                         <input type="hidden" name="price" value='{if condition="$type['ud_type'] eq 0"}{$detail['gd_price']}{else /}{$detail['gd_discount']}{/if}'>
+                        {volist name="photo" id="p"}
+                            {if condition='$p.is_first eq 1'}
+                            <input type="hidden" name="photo" value="{$p.pic}">
+                            {/if}
+                        {/volist}
+                        <input type="hidden" name="gname" value="{$foods['gd_title']}">
                   <div class="col-md-6">
                       <div class="gt_shop_detail_banner">
                           <h4>{$foods['gd_title']}</h4>
