--- a/application/index/view/index/hotelDetail.html
+++ b/application/index/view/index/hotelDetail.html
@@ -83,9 +83,18 @@
                 <div class="">
                     <h4 class="h4" style="color: #2DCC70;">住宿</h4>
                     <form action="{:url('index/hotel/save')}" method="post">
-                        <input type="hidden" name="id" value="">
-                        <input type="hidden" name="room" value="">
-                        <input type="hidden" name="price" value="">
+                        <input type="hidden" name="bid" value="{$hotels['bus_id']}">
+                        <input type="hidden" name="cid" value="{$hotels['id']}">
+                        <input type="hidden" name="gname" value="{$hotels['gd_title']}">
+                        <input type="hidden" name="roomType" value="{$hotels['gd_abstract']}">
+                        <input type="hidden" name="price" value="{$detail['gd_price']}">
+                        <input type="hidden" name="discount" value="{$detail['gd_discount']}">
+                        {volist name="photos" id="p"}
+                        {if condition='$p.is_first eq 1'}
+                        <input type="hidden" name="photo" value="{$p.pic}">
+                        {/if}
+                        {/volist}
+
                     <table class="table table-hover">
                         <tr>
                             <th style="text-align: center">- 房间类型 -</th>
