--- a/application/admin/view/order/done.html
+++ b/application/admin/view/order/done.html
@@ -33,9 +33,9 @@
                                 <th style="text-align: center">总金额(元)</th>
                                 <th style="text-align: center" class="col-sm-3">操作</th>
                             </tr>
-                            {volist name="un" id="v"}
+                            {volist name="un" id="v" key="k"}
                             <tr style="line-height: 20px">
-                                <td style="text-align: center">1</td>
+                                <td style="text-align: center">{$k}</td>
                                 <td style="text-align: center">{$v['o_order_num']}</td>
                                 <td style="text-align: center">{$v['o_gname']}</td>
                                 <td style="text-align: center">{$v['o_price']}</td>
