--- a/application/index/view/index/hotelBook.html
+++ b/application/index/view/index/hotelBook.html
@@ -26,38 +26,41 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-7" style="border: 1px solid #2DCC70;">
-                    <form action="">
-                    <div class="" style="padding: 10px;">
-                        <h4 class="h4">(酒店名)</h4>
+                    <form action="{:url('/hotelBook')}" method="post" style="padding: 10px;" onsubmit="return checkMsg()">
+                        <!--房间类型-->
+                    <input type="hidden" name="roomtype" value="{$data['roomType']}">
+                        <!--单价-->
+                        <input type="hidden" name="dan" value="{if condition='$utype eq 0'}{$data['price']}{else}{$data['discount']}{/if}">
+                        <!--总价-->
+                    <input type="hidden" name="total" id="totalPrice">
+                        <!--积分-->
+                    <input type="hidden" name="point" id="finalPoint">
+                        <!--商家id-->
+                    <input type="hidden" name="bid" value="{$data['bid']}">
+                        <!--商品id-->
+                    <input type="hidden" name="cid" value="{$data['cid']}">
+                        <!--商品图片-->
+                    <input type="hidden" name="photo" value="{$data['photo']}">
+                        <h4 class="h4">{$data['gname']}</h4>
                         <hr>
                         <h5>预订信息</h5>
                         <hr>
                         <div class="">
                             <span class="col-sm-2">客房类型:</span>
-                            <span>(标间...)</span>
+                            <span>{$data['roomType']}</span>
                         </div>
                         <br><br>
                         <div class="">
                             <span class="col-sm-2">入住日期:</span>
                             <span>
-                               <form class="form-horizontal">
-                                 <fieldset>
-                                  <div class="control-group">
-                                    <div class="controls">
-                                     <div class="input-prepend input-group">
-                                       <span class="add-on input-group-addon"><i class="glyphicon glyphicon-calendar fa fa-calendar"></i></span><input type="text" readonly style="width: 200px" name="reservation" id="reservation" class="form-control" value="2014-5-21 - 2014-6-21" />
-                                     </div>
-                                    </div>
-                                  </div>
-                                 </fieldset>
-                               </form>
+                              <input type="text" name="time" id="calendar2" style="width: 180px;">
                             </span>
                         </div>
                         <br>
                         <div class="gt_product_left_wrap ml20" style="border: none;">
                             <span>数量:</span>
                             <div id="incdec">
-                                <input type="text" value="1" readonly="readonly" id="num" name="num"/>
+                                <input type="text" value="0" readonly="readonly" id="num" name="num"/>
                                 <div class="gt_increment">
                                     <button type="button" id="up" >+</button>
                                     <button type="button" id="down" > -</button>
@@ -67,28 +70,30 @@
                         <!--<br>-->
                         <div class="">
                             <span class="col-sm-2">合计:</span>
-                            <span>xxx元</span>
+                            <span id="oldprice"><b id="old">{if condition='$utype eq 0'}{$data['price']}{else}{$data['discount']}{/if}</b>元</span>
+                            <span id="newprice" style="display: none"><b id="new1"></b>元</span>
                         </div>
                         <br>
                         <div class="">
                             <span class="col-sm-2">赠送积分:</span>
-                            <span>xxx分</span>
+                            <span id="point"></span>
+                            <span style="display: none" id="new"></span>
                         </div>
                         <hr>
                         <h4>入住信息</h4>
                         <hr>
-                        <form class="form-horizontal">
+                        <div method="post" class="form-horizontal">
                             <div class="form-group">
                                 <label class="col-sm-2 control-label">入住人</label>
                                 <div class="col-sm-10">
-                                    <input type="text" class="form-control"  placeholder="请输入联系人姓名">
+                                    <input type="text" id="ren" name="name" class="form-control"  placeholder="请输入联系人姓名">
                                 </div>
                             </div>
                             <br><br>
                             <div class="form-group">
-                                <label for="" class="col-sm-2 control-label">手机号码</label>
+                                <label class="col-sm-2 control-label">手机号码</label>
                                 <div class="col-sm-10">
-                                    <input type="text" class="form-control" id="" placeholder="请输入联系人手机号码">
+                                    <input type="text" name="phone" class="form-control" id="shouji" placeholder="请输入联系人手机号码">
                                 </div>
                             </div>
                             <br>
@@ -107,9 +112,9 @@
                                 </div>
                             </div>
                             <br><br><br>
-                        </form>
-                    </div>
+                        </div>
                     </form>
+                    </div>
                 </div>
             </div>
         </div>
@@ -120,28 +125,94 @@
 {block name="myjs"}
 <script type="text/javascript" src="/static/app/index/js/moment.js"></script>
 <script type="text/javascript" src="/static/app/index/js/daterangepicker.js"></script>
+<script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
+<script src="/static/app/index/js/jquery.mobile.custom.js"></script>
+<script src="/static/app/index/js/jquery.toc.min.js"></script>
+<script src="/static/app/index/js/prism.js"></script>
+<script src="/static/app/index/js/jquery-asDatepicker.js"></script>
+<script src="/static/app/index/js/language.js"></script>
 <script>
     $(function(){
         $('#up').click(function(){
             if($('#num').val() >= 99){
                 $('#num').val(99);
+            }else{
+                $('#num').val() + 1;
             }
-            $('#num').val() + 1;
+            var n = parseInt($('#num').val());
+            var p = Math.round($('#old').html()/20);
+            var t = n*p;
+//            console.log(p);
+//            改变积分
+            $('#point').css('display','none');
+            $('#new').css('display','block');
+            $('#new').html(t);
+            $('#finalPoint').val(t);
+//            改变总价
+            var price = parseInt($('#old').html());
+            var total = n*price;
+            $('#oldprice').css('display', 'none');
+            $('#newprice').css('display', 'block');
+            $('#new1').html(total);
+            $('#totalPrice').val(total);
+
         });
-
-
-        $('#down').click(function(){
-            if($('#num').val() <= 1){
+        $('#down').click(function() {
+            if ($('#num').val() <= 1) {
                 $('#num').val(1);
+            } else {
+                $('#num').val() - 1;
             }
-            $('#num').val() - 1;
+            var n = parseInt($('#num').val());
+            var p = Math.round($('#old').html() / 20);
+            var t = n * p;
+//            console.log(t);
+            $('#point').css('display', 'none');
+            $('#new').css('display', 'block');
+            $('#new').html(t);
+            $('#finalPoint').val(t);
+//            改变总价
+            var price = parseInt($('#old').html());
+            var total = n*price;
+            $('#oldprice').css('display', 'none');
+            $('#newprice').css('display', 'block');
+            $('#new1').html(total);
+            $('#totalPrice').val(total);
+//            console.log($('new').html());
         });
 
-        $('#reservation').daterangepicker(null, function(start, end, label) {
-            console.log(start.toISOString(), end.toISOString(), label);
-        });
+//        选择日期
+        $("#calendar2").asDatepicker({mode: 'range'});
+
+//        计算积分
+        $('#point').html(($('#old').html()/20).toFixed());
 
 
-    })
+
+    });
+</script>
+<script>
+    ////    检查表单数据
+    function checkMsg(){
+        if($('#num').val() == 0){
+//            console.log($('#num').val());
+            alert('请选择数量');
+            return false;
+        }else if($('#ren').val() == '' || $('#ren').val().match(/^[A-Za-z0-9_\u4e00-\u9fa5]{1,16}$/) == null){
+//            console.log($('#ren').val());
+            alert('请填写入住人姓名');
+            return false;
+        }else if ($('#shouji').val() == '' || $('#shouji').val().match(/^(13[0-9]|14[5|7]|15[0|1|2|3|5|6|7|8|9]|18[0|1|2|3|5|6|7|8|9])\d{8}$/) == null){
+//            console.log($('#shouji').val());
+            alert('请填写入住人联系方式');
+            return false;
+        }else{
+            return true;
+        }
+
+//
+
+    }
+//
 </script>
 {/block}
