--- a/application/index/view/index/shop-cart-副本.html
+++ b/application/index/view/index/shop-cart-副本.html
@@ -30,13 +30,13 @@
                 <div class="row col-sm-12">
                     <form action="index/order/index" method="post" onsubmit="return check()">
                         <!--传递用户id-->
-                        <input type="hidden" name="uid" value="{$uid}">
+                        <input type="hidden" name="uid" value="{$data[0]['ca_uid']}">
                         <!--商品id-->
-                        <input type="hidden" name="gid" value="{$gid}">
+                        <input type="hidden" name="gid" value="{$data[0]['ca_gdid']}">
                         <!--商品单价-->
-                        <input type="hidden" name="price" value="{$result[0]['ca_price']}">
+                        <input type="hidden" name="price" value="{$data[0]['ca_price']}">
                         <!--传递商品类型-->
-                        <input type="hidden" name="type" value="{$result[0]['type']}">
+                        <input type="hidden" name="type" value="{$type}">
                         <!--传递购物车id-->
                         <input type="hidden" name="cid" value="{$cid}">
                         <p style="display: none" id="base">{$point}</p>
@@ -73,20 +73,25 @@
                         <th style="text-align: center;">总价 (元)</th>
                         <th style="text-align: center;">操作</th>
                     </tr>
-                    {volist name="result" id="r" key="k"}
+
                     <tr>
-                        <td style="text-align: center;line-height: 62px;">{$k}</td>
+                        <td style="text-align: center;line-height: 62px;">1</td>
+                        {volist name="photo" id="p"}
                         <td style="text-align: center;line-height: 62px;">
-                            <img src="/uploads/{$r['photo']}" class="img-rounded" alt="" width="100" height="56">
+                            <img src="/uploads/{$p['p0']}" class="img-rounded" alt="" width="100" height="56">
                         </td>
-                        <td style="text-align: center;line-height: 62px;">{$r['title']}</td>
-                        <td style="text-align: center;line-height: 62px;">{$r['type']}</td>
-                        <td style="text-align: center;line-height: 62px;" id="price">{$r['ca_price']}</td>
+                        {/volist}
+                        {volist name="res" id="r"}
+                        <td style="text-align: center;line-height: 62px;">{$r['gd_title']}</td>
+                        <td style="text-align: center;line-height: 62px;">{$cate}</td>
+                        {/volist}
+                        {volist name="data" id="d"}
+                        <td style="text-align: center;line-height: 62px;" id="price">{$d['ca_price']}</td>
                         <td style="text-align: center;">
                             <div class="gt_product_left_wrap" style="border-bottom: none;margin-left: 0px;margin: 8px 0px -12px">
                                 <div id="incdec" style="margin-left: 54px;">
                                     <!--传递数量-->
-                                    <input type="text" value="{$r['ca_num']}" readonly="readonly" id="num" name="num"/>
+                                    <input type="text" value="{$d['ca_num']}" readonly="readonly" id="num" name="num"/>
                                     <div class="gt_increment">
                                         <button type="button" id="up" >+</button>
                                         <button type="button" id="down" > -</button>
@@ -94,13 +99,12 @@
                                 </div>
                             </div>
                         </td>
-                        <input type="hidden" name="total" id="passtotal">
+                            <input type="hidden" name="total" id="passtotal">
                         <td style="text-align: center;line-height: 62px;" id="total"></td>
                         <td style="text-align: center;line-height: 62px;">
-                            <button type="button" class="btn btn-danger glyphicon glyphicon-trash del" data-id="{$v['ca_id']}"></button>
+                            <button type="button" class="btn btn-danger glyphicon glyphicon-trash del" data-id="{$cid}"></button>
                         </td>
                     </tr>
-
                     {/volist}
                 </table>
                 </div>
